--- a/package.json
+++ b/package.json
@@ -12,18 +12,21 @@
     "@kinde-oss/kinde-auth-nextjs": "^1.8.24",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.42.0",
     "@trpc/next": "^10.42.0",
     "@trpc/react-query": "^10.42.0",
     "@trpc/server": "^10.42.0",
+    "@uploadthing/react": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.288.0",
-    "next": "13.5.6",
+    "next": "^14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -31,6 +34,7 @@
     "react-pdf": "^7.5.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
