Implemented input of messages

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^1.8.24",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.5.2",
+    "@qdrant/js-client-rest": "^1.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-progress": "^1.0.3",
@@ -25,17 +26,21 @@
     "@trpc/react-query": "^10.42.0",
     "@trpc/server": "^10.42.0",
     "@uploadthing/react": "^6.0.0",
+    "ai": "^2.2.25",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "langchain": "^0.0.197-rc.1",
     "lucide-react": "^0.288.0",
     "next": "^14.0.1",
+    "openai": "^4.20.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^7.5.1",
     "react-resize-detector": "^9.1.0",
     "react-textarea-autosize": "^8.5.3",
