--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@kinde-oss/kinde-auth-nextjs": "^1.8.24",
+    "@mantine/hooks": "^7.2.2",
     "@pinecone-database/pinecone": "^1.1.2",
     "@prisma/client": "^5.5.2",
     "@qdrant/js-client-rest": "^1.6.0",
